# gesalt_os

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
kernel/: Cargo.toml
kernel/src/: acpi.rs  allocator.rs  dummy_driver.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  scheduler.rs  serial.rs  userspace.rs  vga_buffer.rs
kernel/src/allocator/: linked_list.rs
kernel/src/task/: executor.rs  keyboard.rs  simple_executor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  userspace.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
