[package]
name = "nu_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[workspace]
members = ["boot"]

[dependencies]
bootloader = "0.10.10"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.7"
uart_16550 = "0.2.15"
pic8259 = "0.10.2"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootloader]
map-physical-memory = true

#[package.metadata.bootimage]
#run-command = ["qemu-system-x86_64", "-cpu", "host", "-accel", "hvf", "-drive", "format=raw,file=target/x86_64-nu_os/debug/bootimage-nu_os.bin"]
#test-args = [
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
#    "-display", "none"
#    ]
#test-success-exit-code = 33         # (0x10 << 1) | 1