cargo-features = []

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
volatile = "0.4.6"
spin = "0.9"
x86_64 = "0.14"
x86 = "0.52"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.6.1"
bootloader_api = "0.11"
noto-sans-mono-bitmap = "0.2"
log = "0.4.14"
acpi = "4.1.1"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

#[dependencies.uuid]
#version = "0.8.2"
#features = ["v1"]